# nova.rs

./: .gitignore  Cargo.toml  LICENCE  README.md  config.example.yaml  config.yaml
src/: config.rs  main.rs
src/api/: mod.rs
src/api/domains/: ava.rs  cho.rs  mod.rs  osu.rs
src/constants/: mod.rs  privileges.rs
src/objects/: mod.rs  players.rs
src/state/: mod.rs
