[package]
name = "nova_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
reqwest = "0.11.16"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
serde_yaml = "0.9.21"
sqlx = { version = "0.6.3", features = [
    "mysql",
    "runtime-actix-rustls",
    "macros",
] }
tokio = "1.27.0"
env_logger = "0.10.0"
lazy_static = "1.4.0"
regex = "1.8.1"
chrono = "0.4.24"
bitflags = "2.1.0"

[profile.dev.package."*"]
opt-level = 0

[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "s"   # Optimize for binary size
strip = true


[package.metadata.cargo-make]
warn_unused_must_use = false
